assets/css/screen.css
/* Table of Contents
/* ------------------------------------------------------------

This is a development CSS file which is built to a minified
production stylesheet in assets/built/screen.css

1.  Global Styles
2.  Layout
3.  Special Templates
4.  Site Header
5.  Site Navigation
6.  Post Feed
7.  Single Post
  7.1. Subscribe Form
  7.2. Post Footer
     7.2.1 Single Author Byline
     7.2.2 Multiple Author Byline
  7.3. Comments
  7.4. Related Posts
  7.5. Floating Header
  7.6. Koenig Styles
8.  Author Template
9.  Error Template
10. Subscribe Overlay
11. Site Footer

*/


/* 1. Global - Set up the things
/* ---------------------------------------------------------- */
@import "global.css";

body {
background: #ffffff; /*    --Voile Edit: Make the background white*/
}

.img {
    display: block;
    width: 100%;
    height: 100%;
    background-position: center center;
    background-size: cover;
    border-radius: 100%;
}

.hidden {
    visibility: hidden;
    position: absolute;
    text-indent: -9999px;
}


/* 2. Layout - Page building blocks
/* ---------------------------------------------------------- */

.site-wrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
    flex-flow: column;
}

.site-main {
    z-index: 100;
    flex-grow: 1;
}

/* Full width page blocks */
.outer {
    position: relative;
    /* padding: 0 4vw; */
    padding: 0 0;
}

/* Centered content container blocks */
.inner {
    margin: 0 auto;
    /* max-width: 1040px; */
    /* width: 100%; */
    /* padding: 0 4vw; */
}


.site-main .inner {
    display: flex;
    flex-direction: column;
}

/* 3. Special Template Styles
/* ---------------------------------------------------------- */

@media (min-width: 900px) {
    .home-template .post-feed,
    .tag-template .post-feed,
    .author-template .post-feed {
        /* margin-top: -70px; */
        padding-top: 0;
    }
    .home-template .site-nav {
        position: relative;
        /* top: -70px; */
    }
}


/* 4. Site Header
/* ---------------------------------------------------------- */

.site-header {
    position: relative;
    /* padding-top: 12px; */
    padding-bottom: 12px;
/*    color: #fff; --Voile Edit: remove white text which doesn't show up*/
    /* background: color(var(--brand-tertiary)) no-repeat center center; */
    background-size: cover;
}

.site-header:before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 10;
    display: block;
/*    background: rgba(0,0,0,0.18); --Voile Edit: remove black overlay*/
}

.site-header:after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: auto;
    left: 0;
    z-index: 10;
    display: block;
    height: 80px;
/*    background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));*/
}

.site-header.no-cover:before,
.site-header.no-cover:after {
    display: none;
}

.site-header-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 4vw 4vw 4vw 4vw;  /* --Voile Edit: Decrease top padding */
    min-height: 200px;
/*    max-height: 450px; --Voile Edit: Remove max height on logo*/
    text-align: center;
}

.site-header-content .button-default {
    margin-top: 2vw;
    padding: 0 48px;;
}

.site-title {
    z-index: 10;
    margin: 0;
    padding: 0;
    font-size: 3.8rem;
    font-weight: 700;
    color: color(var(--brand-secondary) l(-5%));
    font-family: Caslon Graphique EF;
    /* -webkit-font-smoothing: subpixel-antialiased; */
}

.site-logo {
    /* max-height: 45px; --Voile Edit: remove size limit on logo to allow for large overlay, will take up more space on mobile */
    max-width: 90%;
    padding-right: 2vw;
    max-height: 40px;
    margin-top: 5vw;
}

.site-description {
    z-index: 10;
    margin: 48px 0 0 0;
    padding: 25px 0 16px 0;  /*--Voile Edit: decrease padding between description and logo*/
    font-size: 5rem;
    font-weight: 800;
    font-family: Montserrat;
    max-width: 98%; /*--Voile Edit: add a little padding to the sides*/
    letter-spacing: 0.5px;
    opacity: 0.9;
}

.site-subdescription {
    font-weight: 500;
    font-size: 2rem;
    font-style: italic;
    margin-top: 0;
}

@media (max-width: 500px) {
    h2 {
        font-size: 3rem;
        text-align: left;
    }
    h3 {
        font-size: 1.6rem;
        text-align: left;
    }
    
    .site-logo {
        max-width: 98%;
/*      Voile Edit: allow the site logo to take up more space on mobile*/
        /* max-width: 80%; */
    }

    .site-subdescription {
        margin-bottom: 6vw;
    }

    .site-header-content .button-default {
        /* align-self: flex-start; */
    }
}
/* ... */

